# nu_plugin_sysml_v2

./: .gitignore  Cargo.toml  README.adoc  pixi.toml
docs/: README.adoc
docs/explanation/: architecture.adoc  why-a-cargo-workspace.adoc  why-sysml-v2-parser.adoc
docs/how-to/: build-conda-packages.adoc  generate-proto-and-xsd.adoc  lint-sysml-files.adoc  resolve-imports-against-a-library.adoc  use-the-nushell-plugin.adoc
docs/reference/: cli.adoc  plugin-commands.adoc  workspace-layout.adoc
docs/tutorials/: getting-started.adoc
nu_plugin_sysml_v2/: .gitignore  Cargo.toml
nu_plugin_sysml_v2/src/: main.rs
recipe/: recipe.yaml
src/: emit_proto.rs  emit_xsd.rs  lib.rs  lint.rs  lower.rs  main.rs
sysml-v2-cli/src/: lib.rs  lint.rs  lower.rs  main.rs  resolve.rs
sysml-v2-cli/tests/: emit.rs  resolve_imports.rs
tests/: lint.rs
