[package]
name = "nu_plugin_sysml_v2"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Fredrick Eisele <fred.eisele@vanderbilt.edu>"]
description = "Nushell plugin that parses SysML v2 textual notation into structured Nu values"
license = "MIT"

[[bin]]
name = "nu_plugin_sysml_v2"
path = "src/main.rs"

[dependencies]
nu-plugin = "0.114.0"
nu-protocol = "0.114.0"
sysml-v2-parser = { version = "0.32.0", features = ["serde"] }
serde_json = "1"
