[package]
name = "sysml-v2-cli"
version = "0.1.0"
edition = "2021"
description = "SysML v2 syntax validator for the granule toolchain, built on sysml-v2-parser."
authors = ["Fredrick Eisele <fred.eisele@vanderbilt.edu>"]
license = "MIT"

[[bin]]
name = "sysml-v2-cli"
path = "src/main.rs"

[dependencies]
anyhow           = "1"
clap             = { version = "4", features = ["derive"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
sysml-v2-parser  = "0.29.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
